public/login.css
body {
	margin: 0;
	padding: 0;
	font-family: Arial, sans-serif;
	background-color: #f5f5f5;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
}

form {
	background-color: #fff;
	padding: 2rem;
	border: 1px solid #ddd;
	border-radius: 8px;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
	width: 100%;
	max-width: 360px;
	display: flex;
	flex-direction: column;
}



h2 {
	margin-top: 0;
	margin-bottom: 1.5rem;
	font-size: 1.5em;
	color: #1976d2;
	text-align: center;
}

label {
	margin-bottom: 0.4rem;
	font-weight: bold;
	color: #333;
}

input {
	padding: 10px;
	border: 1px solid #ccc;
	border-radius: 5px;
	font-size: 1em;
	margin-bottom: 1rem;
}

button {
	width: 100%;
	padding: 10px;
	font-size: 1em;
	border: 1px solid #1976d2;
	background-color: #1976d2;
	color: white;
	border-radius: 5px;
	cursor: pointer;
	transition: background 0.2s ease;
	margin-top: 0.5rem;
    margin-bottom: 2rem;
}

button:hover {
	background-color: #125aa3;
}

p {
	margin-top: 1rem;
	text-align: center;
	font-size: 0.9em;
	color: #555;
}

p a {
	color: #1976d2;
	text-decoration: none;
}

p a:hover {
	text-decoration: underline;
}

